--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html>
+<meta name="google-site-verification" content="BnjEqgmWyYvx-MLO..." />
 <head>
   <title>The Real</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
