--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
-<meta name="google-site-verification" content="BnjEqgmWyYvx-MLO..." />
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>The Real</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="manifest" href="manifest.json" />
-  <meta name="theme-color" content="#00c2ff" />
+  <link rel="stylesheet" href="style.css" />
+  <title>The Real News</title>
 </head>
 <body>
-  <h1>Welcome to The Real</h1>
-  <p>Bringing truth and awareness to every home.</p>
-  <a href="login.html">Admin Login</a>
+  <header>
+    <h1>The Real News</h1>
+  </header>
+  <main id="news-container">
+    <p>Loading news...</p>
+  </main>
+  <footer>
+    <p>&copy; 2025 The Real News</p>
+  </footer>
+  <script src="news.js"></script>
 </body>
 </html>
